--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "@pablotheblink/flashyjs": "^1.0.5",
+        "chart.js": "^4.5.0",
         "jquery": "^3.7.1"
     }
 }
