--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -30,6 +30,21 @@ services:
         cron -f"
     networks:
       - red_cranuk
+  mysql:
+    image: mysql:8.0
+    container_name: mysql
+    restart: unless-stopped
+    environment:
+      MYSQL_ROOT_PASSWORD: admin
+    ports:
+      - "3306:3306"
+    volumes:
+      - dbdata:/var/lib/mysql
+    networks:
+      - red_cranuk
+
+volumes:
+  dbdata:
 
 networks:
   red_cranuk:
